--- a/app/views/instalacion/index.html.erb
+++ b/app/views/instalacion/index.html.erb
@@ -274,7 +274,7 @@ body {background-image:url(images/pattern/ptn-04.png);}
                     <li><%= link_to t('instalaciones_clarion'), instalaciones_path %></li>
                       <li><%= link_to t('reservaciones_clarion'), reservaciones_path %></li>
                     </li>
-                    <li><a href="galeria.html">Galeria</a></li>
+                     <li><%= link_to t('galeria_clarion'), galeria_path %></li>
                     <% if t('idioma_clarion') == "English" %>
                          <li><%= link_to t('idioma_clarion'), instalaciones_path(:locale => "en") %></li>
                                 <% else %>
