--- a/app/views/advertisements/show.html.erb
+++ b/app/views/advertisements/show.html.erb
@@ -5,7 +5,7 @@
 <p>
  
 
-<%= image_tag @advertisement.photo.url%>
+<%= image_tag @advertisement.photo.url(:medium)%>
 
 </p>
 
@@ -16,4 +16,5 @@
 
 
 <%= link_to 'Edit', edit_advertisement_path(@advertisement) %> |
-<%= link_to 'Back', advertisements_path %>
+<%= link_to 'Back to Advertisements', advertisements_path %>   |
+<%= link_to 'Back to Promociones', promociones_path %>
