--- a/app/views/user_mailer/registration_confirmation.text.erb
+++ b/app/views/user_mailer/registration_confirmation.text.erb
@@ -1,1 +1,14 @@
-Thank you for registration!
+  Nombre:	<%= @hola.nombre %>
+  Dirección:	<%= @hola.direccion %>
+  Cuidad:	<%= @hola.cuidad %>
+  Estado:	<%= @hola.estado %>
+  Código Zip:	<%= @hola.zip %>
+  Procedencia:  <%= @hola.procedencia %>
+  Compañía:	<%= @hola.compania %>
+  Telefono:	<%= @hola.telefono %>
+  Correo:	<%= @hola.correo %>
+
+
+
+    
+    
