--- a/app/views/promociones/index.html.erb
+++ b/app/views/promociones/index.html.erb
@@ -22,7 +22,7 @@
 <!-- CSS End //-->
 
 <!-- JS Start //--> 
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.livequery.min.js"></script>
 <script type="text/javascript" src="js/jquery.detectbrowser.js"></script> 
 <script type="text/javascript" src="js/jquery.colorbox-min.js"></script>
