--- a/app/views/habitaciones/index.html.erb
+++ b/app/views/habitaciones/index.html.erb
@@ -346,7 +346,7 @@ body {background-image:url(images/pattern/ptn-04.png);}
         <div class="mainbody">
           <div class="maincontent">
             <h3><%=t :reservaciones_clarion%></h3>
-            <p><a href="reservaciones.html"><img src="/images/reservaciones.jpg" alt=".shadow css class" width="290" height="135" border="0" class="shadow" style="margin-left: 0px; float: left" /></a>Dirección: Avenida Circunvalación 2 Calle, S.O. Bo. Rio de piedras. San Pedro Sula, Cortés, Honduras<br>
+            <p><a href="reservaciones.html"><img src="/images/reservaciones290.jpg" alt=".shadow css class" width="290" height="135" border="0" class="shadow" style="margin-left: 0px; float: left" /></a>Dirección: Avenida Circunvalación 2 Calle, S.O. Bo. Rio de piedras. San Pedro Sula, Cortés, Honduras<br>
               PBX :  (504) 255-36070 <br>
               PBX:   (504) 255-36071 <br>
               Fax:   (504) 255-24570 <br>
