--- a/app/views/aboutus/index.html.erb
+++ b/app/views/aboutus/index.html.erb
@@ -246,21 +246,23 @@ body {background-image:url(images/pattern/ptn-04.png);}
             <div class="grid_9">
               <ul class="menu sf-menu">
                 
-</li>
-                <li><%= link_to t("inicio_clarion"), root_path %></li>
-                </li>
-                <li><%= link_to t("habitaciones_clarion"), habitaciones_path %></a></li>
-                </li>
-                <li><a href="convenciones.html">Honduras</a></li>
-                <li><%= link_to t('instalaciones_clarion'), instalaciones_path %></li>
-                 <li><%= link_to t('reservaciones_clarion'), reservaciones_path %></li>
-                </li>
-                 <li><%= link_to t('galeria_clarion'), galeria_path %></li>
-                 <li><%= link_to t('promociones_clarion'), promociones_path %></li>
+ </li>
+
+		    		 <li><%= link_to t('inicio_clarion'), root_path %></li>
+
+                    </li>
+                     <li><%= link_to t('habitaciones_clarion'), habitaciones_path %></li>
+                    </li>
+                    <li><%= link_to t('instalaciones_clarion'), instalaciones_path %></li>
+                    <li><%= link_to t('reservaciones_clarion'), reservaciones_path %></li>
+                    </li>
+                    <li><%= link_to t('galeria_clarion'), galeria_path %></li>
+                    <li><%= link_to t('promociones_clarion'), promociones_path %></li>
+                    <li><%= link_to t('aboutus_clarion'), aboutus_path %></li>
                 <% if t('idioma_clarion') == "English" %>
-                         <li><%= link_to t('idioma_clarion'), promociones_path(:locale => "en") %></li>
+                         <li><%= link_to t('idioma_clarion'), aboutus_path(:locale => "en") %></li>
                                 <% else %>
-                                   <li><%= link_to t('idioma_clarion'), promociones_path(:locale => "es") %></li>  
+                                   <li><%= link_to t('idioma_clarion'), aboutus_path(:locale => "es") %></li>  
                                        <% end %> 
                     
                 
@@ -276,7 +278,7 @@ body {background-image:url(images/pattern/ptn-04.png);}
       <div class="wrapper">
         <div class="container_12">
           <div class="grid_12">
-            <h1>About us</h1>
+            <h1><%= t(:aboutus_clarion) %></h1>
           </div>
         </div>
         <div class="clear"></div>
