--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -533,13 +533,13 @@ body {background-image:url(images/pattern/ptn-04.png);}
                     </li>
                      <li><%= link_to t('habitaciones_clarion'), habitaciones_path %></li>
                     </li>
-                    <li><a href="convenciones.
-html">Honduras</a></li>
                     <li><%= link_to t('instalaciones_clarion'), instalaciones_path %></li>
                     <li><%= link_to t('reservaciones_clarion'), reservaciones_path %></li>
                     </li>
                     <li><%= link_to t('galeria_clarion'), galeria_path %></li>
                     <li><%= link_to t('promociones_clarion'), promociones_path %></li>
+                    <li><%= link_to t('aboutus_clarion'), aboutus_path %></li>
+                    
                      <% if t('idioma_clarion') == "English" %>
                          <li><%= link_to t('idioma_clarion'), root_path(:locale => "en") %></li>
                                 <% else %>
