--- a/app/views/habitaciones/index.html.erb
+++ b/app/views/habitaciones/index.html.erb
@@ -13,7 +13,7 @@
 <link href="css/colorbox.css" rel="stylesheet" type="text/css" /> 
 <link href="css/nivo-slider.css" rel="stylesheet" />
 <link href="css/superfish.css" rel="stylesheet" />
-<link id="google_font" href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:light,regular' rel='stylesheet' type='text/css' />
+<link href="css/google_font.css" rel="stylesheet" />
 <!-- fallback if js not enabled //-->
 <link href="css/noscript.css" rel="stylesheet" type="text/css" media="screen,all" id="noscript" /> 
 <!-- CSS End //-->
@@ -299,29 +299,57 @@ body {background-image:url(images/pattern/ptn-04.png);}
             <div class="slide2">
                 <a href="#1"><img src="/images/nivoslides/slide4.jpg" alt="Demo Slide" /></a>
             </div>
-            <div class="slide2">
+             <div class="slide2">
                 <a href="#1"><img src="/images/nivoslides/slide5.jpg" alt="Demo Slide" /></a>
+            </div>  
+             <div class="slide2">
+                <a href="#1"><img src="/images/nivoslides/slide6.jpg" alt="Demo Slide" /></a>
+            </div> 
+            <div class="slide2">
+                <a href="#1"><img src="/images/nivoslides/slide7.jpg" alt="Demo Slide" /></a>
+            </div> 
+            <div class="slide2">
+                <a href="#1"><img src="/images/nivoslides/slide8.jpg" alt="Demo Slide" /></a>
+            </div> 
+            <div class="slide2">
+                <a href="#1"><img src="/images/nivoslides/slide9.jpg" alt="Demo Slide" /></a>
+            </div> 
+            <div class="slide2">
+                <a href="#1"><img src="/images/nivoslides/slide10.jpg" alt="Demo Slide" /></a>
+            </div> 
+               <div class="slide2">
+                <a href="#1"><img src="/images/nivoslides/slide11.jpg" alt="Demo Slide" /></a>
             </div>
-	  </div>
+               <div class="slide2">
+                <a href="#1"><img src="/images/nivoslides/slide12.jpg" alt="Demo Slide" /></a>
+            </div>
+               <div class="slide2">
+                <a href="#1"><img src="/images/nivoslides/slide13.jpg" alt="Demo Slide" /></a>
+            </div>  
+               <div class="slide2">
+                <a href="#1"><img src="/images/nivoslides/slide14.jpg" alt="Demo Slide" /></a>
+            </div> 
+               <div class="slide2">
+                <a href="#1"><img src="/images/nivoslides/slide15.jpg" alt="Demo Slide" /></a>
+            </div> 
+               <div class="slide2">
+                <a href="#1"><img src="/images/nivoslides/slide16.jpg" alt="Demo Slide" /></a>
+            </div>  
+</div>
 </div><!-- Slideshow End -->
 <div id="container" class="container_12 clearfix">
   <div class="block">
-        <div class="grid_6">
+        <div>
           <h2 class="title"><%=t :nuestras_habitaciones%></h2>
-          <p> Todas nuestras lujosas habitaciones han sido decoradas con el mejor gusto para hacer de cada estancia una experiencia inolvidable y así sobrepasar las expectativas de nuestros huéspedes.</p>
+          <p> Todas nuestras comodas,relajantes y lujosas habitaciones han sido decoradas con el mejor gusto para hacer de cada estancia una experiencia inolvidable y así sobrepasar las expectativas de nuestros huéspedes,cuentan con finas amenidades para hacer de su estadia unica, entre ellas: Aire acondicionado, TV de 32' con cable, acceso a internet inalambrico de alta velocidad, escritorio de trabajo, amplios baños con ducha y secadora. El huesped tiene como cortesia el cafe y el agua dentro de la habitacion. El Hotel cuenta con seguridad las 24 horas y camaras de vigilancias en todas sus areas</p>
         </div>
-        <div class="grid_6">
-          <h2 class="title"><%=t :todas_habitaciones %>:</h2>
-          <p> Nuestras habitaciones están equipadas con cajilla de seguridad, aire acondicionado, televisión por cable y sistema de alarma contra incendio. Además, todas tienen baño de mármol, con ducha, bañera y secador de pelo. En todas las áreas del hotel contamos con cámaras de seguridad y vigilancia las 24 horas.<br>
-            <br>
-          </p>
-        </div>
+ 
       </div>
       <div class="grid_13">
         <div class="mainbody">
           <div class="maincontent">
             <h3><%=t :confort_clarion%></h3>
-            <p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/conf.jpg" /> Le ofrecemos muchos servicios y comodidades para que se sienta como en casa, y pueda mantenerse en contacto con sus amigos y su familia, haciendo uso de nuestro acceso inalámbrico a Internet de alta velocidad.<br></p>
+            <p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/conf.jpg" /> Le ofrecemos muchos servicios y comodidades para que se sienta como en casa, y pueda mantenerse en contacto con sus amigos y su familia.<br></p>
           </div>
           <!-- Maincontent end -->
         </div>
@@ -346,7 +374,7 @@ body {background-image:url(images/pattern/ptn-04.png);}
         <div class="mainbody">
           <div class="maincontent">
             <h3><%=t :reservaciones_clarion%></h3>
-            <p><a href="reservaciones.html"><img src="/images/reservaciones290.jpg" alt=".shadow css class" width="290" height="135" border="0" class="shadow" style="margin-left: 0px; float: left" /></a>Dirección: Avenida Circunvalación 2 Calle, S.O. Bo. Rio de piedras. San Pedro Sula, Cortés, Honduras<br>
+            <p><a href="otros.html"><img src="/images/reservaciones290.jpg" alt=".shadow css class" width="290" height="135" border="0" class="shadow" style="margin-left: 0px; float: left" /></a>Dirección: Avenida Circunvalación 2 Calle, S.O. Bo. Rio de piedras. San Pedro Sula, Cortés, Honduras<br>
               PBX :  (504) 255-36070 <br>
               PBX:   (504) 255-36071 <br>
               Fax:   (504) 255-24570 <br>
