--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,7 +29,7 @@
 <!--<link href="css/superfish.css" rel="stylesheet" />-->
 
 
-<link id="google_font" href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:light,regular' rel='stylesheet' type='text/css' /> 
+<link href="css/google_font.css" rel="stylesheet" />
 
 <!-- fallback if js not enabled //-->
 
@@ -579,12 +579,30 @@ body {background-image:url(images/pattern/ptn-04.png);}
 
             </div>
 
-            <div class="slide6">
+            <div class="slide4">
 
                 <img src="images/slides/slide4.jpg" alt="Demo Slide" />
 
             </div>
 
+             <div class="slide6">
+
+                <img src="images/slides/slide5.jpg" alt="Demo Slide" />
+
+            </div>
+ 
+
+                   <div class="slide6">
+
+                <img src="images/slides/slide6.jpg" alt="Demo Slide" />
+
+            </div>
+
+       <div class="slide6">
+
+                <img src="images/slides/slide7.jpg" alt="Demo Slide" />
+
+            </div>
 		</div><!-- Slider Container End -->
 
         
@@ -691,22 +709,14 @@ ta
 
     <div class="block">
 
-<div class="grid_6">
+<div>
 
                 <h2 class="title"> <%=t :bienvenida_hotel %> </h2>
-                <p> <%=t :ubicacion_hotel %></p>
+                <p> <%=t :confort_hotel %></p>
 
         	</div>
 
-<div class="grid_6">
 
-
-  <h2 class="title">Confort</h2>
-
-
- <p> <%=t :confort_hotel %></p>
-
-</div>
 
     </div><!-- Block End --><!-- Block End -->
 
