--- a/app/views/aboutus/index.html.erb
+++ b/app/views/aboutus/index.html.erb
@@ -285,20 +285,91 @@ body {background-image:url(images/pattern/ptn-04.png);}
       </div>
     </div>
 
-<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.hn/maps?f=d&amp;source=s_d&amp;saddr=Hotel+Clarion,+2+Calle+SO,+San+Pedro+Sula,+Cort%C3%A9s&amp;daddr=&amp;geocode=FXqZ7AAdNKbA-iEC0j5FSJhy6ik5zawQb1tmjzEC0j5FSJhy6g&amp;aq=0&amp;oq=Hotel+Clarion,+2+Calle+SO,+San+Pedro+Sula&amp;sll=15.505786,-88.037836&amp;sspn=0.012034,0.019741&amp;hl=en&amp;mra=prev&amp;ie=UTF8&amp;t=m&amp;ll=15.505709,-88.037889&amp;spn=0.003618,0.00456&amp;z=17&amp;output=embed"></iframe><br />
+     
+      <div id="container" class="container_12 clearfix">
+       <div class="grid_12">
+	<div class="clear"></div>
+       </div>
+         <div class="block">
+           <div class="grid_6">
+	   </div>
+	 </div>
 
+          <div class="grid_6">
+            <h3><%=t :bienvenida1%></h3>
+	      <p> <%=t :calurosa_bienvenida%> </p> 
+              <p> <%=t :parrafo1 %> <br><br>
+		  <%=t :parrafo2%>  <br><br>
+		  <%=t :parrafo3%>
+	      <h3><%=t :mision%></h3>
+              <p> <%=t :texto_mision%> </p>
+              <h3><%=t :vision%></h3>
+              <p> <%=t :texto_vision%> </p>
+              <h3><%=t :valores%></h3>
+              <p><%=t :orden%> <p>
+              <p><%=t :limpieza%><p>
+              <p><%=t :respeto%> </p>
+              <p> <%=t :trabajo%> </p>
+              <p> <%=t :honradez%> </p>
+            </div>
+     
+     
+     
+     
+     
+     
+	
+     
+
+            <iframe width="480" height="750" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.hn/maps?f=d&amp;source=s_d&amp;saddr=Hotel+Clarion,+2+Calle+SO,+San+Pedro+Sula,+Cort%C3%A9s&amp;daddr=&amp;geocode=FXqZ7AAdNKbA-iEC0j5FSJhy6ik5zawQb1tmjzEC0j5FSJhy6g&amp;aq=0&amp;oq=Hotel+Clarion,+2+Calle+SO,+San+Pedro+Sula&amp;sll=15.505786,-88.037836&amp;sspn=0.012034,0.019741&amp;hl=en&amp;mra=prev&amp;ie=UTF8&amp;t=m&amp;ll=15.505709,-88.037889&amp;spn=0.003618,0.00456&amp;z=17&amp;output=embed"></iframe><br />
+      
+
+</div>
+
+    </div><!-- Block End --><!-- Block End -->
+
+        
+
+  </div><!-- Container End -->
 
   <div id="bottom">
-      <!-- Container 12 End -->
-      <div id="footer2" class="container_12">
-        <table width="960" border="0" align="center" cellpadding="0" cellspacing="0">
-          <tr>
-            <td> © Copyright 2012 Hotel Clarion  Diseño: Jorge Padilla y Francisco Calix </td>
-            <td class="partner_hotels"><a href="hoteles_asociados.html">Hotel Clarion</a></td>
-          </tr>
-        </table>
-      </div>
+  
+  
+  
+  <div id="footer2" class="container_12">
+ 
+      <table width="960" border="0" align="center" cellpadding="0" cellspacing="0">
+           <td>  <h4 width= "30"> Plantilla hecha por Francisco Calix y Jorge Padilla </h4> </td>
+   <td>
+
+         
+
+         
+        </td>
+ <td>
+
+         
+
+         
+        </td>
+           <td WIDTH=75><!-- Facebook Badge START --><a href="http://www.facebook.com/pages/Clarion-San-Pedro-Sula/204168159620073" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" title="Hotel Clarion San Pedro Sula"></a><br/><a href="http://www.facebook.com/pages/Clarion-San-Pedro-Sula/204168159620073" target="_TOP" title="Hotel Clarion San Pedro Sula"><img src="/images/facebook_64.png" style="border: 0px;" /></a><br/><a href="http://www.facebook.com/business/dashboard/" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" </a><!-- Facebook Badge END -->   </td>
+
+        <tr>
+
+         
+
+         
+        </tr>
+
+      </table>
+
     </div>
+
+  </div>
+
+  <!-- Bottom End -->
+
+</div><!-- Wrapper end -->
 <!-- Bottom End --></div><!-- Wrapper end -->
 
 <script type="text/javascript">$('#noscript').remove();</script>
