--- a/app/views/aboutus/index.html.erb
+++ b/app/views/aboutus/index.html.erb
@@ -320,8 +320,8 @@ body {background-image:url(images/pattern/ptn-04.png);}
      
 	
      
-
-            <iframe width="480" height="750" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.hn/maps?f=d&amp;source=s_d&amp;saddr=Hotel+Clarion,+2+Calle+SO,+San+Pedro+Sula,+Cort%C3%A9s&amp;daddr=&amp;geocode=FXqZ7AAdNKbA-iEC0j5FSJhy6ik5zawQb1tmjzEC0j5FSJhy6g&amp;aq=0&amp;oq=Hotel+Clarion,+2+Calle+SO,+San+Pedro+Sula&amp;sll=15.505786,-88.037836&amp;sspn=0.012034,0.019741&amp;hl=en&amp;mra=prev&amp;ie=UTF8&amp;t=m&amp;ll=15.505709,-88.037889&amp;spn=0.003618,0.00456&amp;z=17&amp;output=embed"></iframe><br />
+	    <h3><%=t :nuestra_ubicacion%></h3>
+            <iframe width="480" height="700" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.hn/maps?f=d&amp;source=s_d&amp;saddr=Hotel+Clarion,+2+Calle+SO,+San+Pedro+Sula,+Cort%C3%A9s&amp;daddr=&amp;geocode=FXqZ7AAdNKbA-iEC0j5FSJhy6ik5zawQb1tmjzEC0j5FSJhy6g&amp;aq=0&amp;oq=Hotel+Clarion,+2+Calle+SO,+San+Pedro+Sula&amp;sll=15.505786,-88.037836&amp;sspn=0.012034,0.019741&amp;hl=en&amp;mra=prev&amp;ie=UTF8&amp;t=m&amp;ll=15.505709,-88.037889&amp;spn=0.003618,0.00456&amp;z=17&amp;output=embed"></iframe><br />
       
 
 </div>
