Javascript.open de Instalaciones/restaurante

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -603,6 +603,11 @@ body {background-image:url(images/pattern/ptn-04.png);}
                 <img src="images/slides/slide7.jpg" alt="Demo Slide" />
 
             </div>
+<div class="slide6">
+
+                <img src="images/slides/slide8.jpg" alt="Demo Slide" />
+
+            </div>
 		</div><!-- Slider Container End -->
 
         
