Bar en instalaciones

--- a/app/views/instalacion/index.html.erb
+++ b/app/views/instalacion/index.html.erb
@@ -334,16 +334,16 @@ body {background-image:url(images/pattern/ptn-04.png);}
 		
 	
                     <h3> <%=t :restaurante_clarion%></h3>
-<p><img width="290" height="135" id="ex7a" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/restaurante.jpg" onclick= "myPopup2('salajuegos')" /></p> 
+<p><img width="290" height="135" id="ex7a" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/restaurante.jpg" onclick= "myPopup2('restaurante')" /></p> 
 <br>
 .
 <br>
 	 
 
 <h3> <%=t :centro_negocios%></h3>
-<p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/centro_de_negocios.jpg" /> Texto </p>
+<p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/centro_de_negocios.jpg" />  </p>
 <h3> <%=t :bar_clarion%></h3>
-<p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/bar.jpg" />Texto.</p>
+<p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/bar.jpg" /></p>
 
                   </div>
                   <!-- Maincontent end -->
@@ -352,8 +352,8 @@ body {background-image:url(images/pattern/ptn-04.png);}
        	  <div class="grid_13">
        	    <div class="mainbody">
        	      <div class="maincontent">
-       	        <h3> <%=t :restaurante_clarion%></h3>
-       	        <p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/restaurante.jpg" />TExto.</p>
+       	        <h3> Bar </h3>
+       	        <p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/bar.jpg" onclick = "myPopup2('bar')" />.</p>
        	       <h3> <%=t :eventos_banquetes%></h3>
        	        <p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/eventos.jpg" />texto.
                 <br>
