--- a/app/views/instalacion/salajuegos.html.erb
+++ b/app/views/instalacion/salajuegos.html.erb
@@ -295,19 +295,28 @@ right:auto;
 
 <script src="galleria/galleria-1.2.9.min.js"></script>
 <style>
-    #galleria{ width: 480px; height: 350px; background-color: #000; margin-left: 50px; }
+    #galleria{ width: 495px; height: 350px; background-color: #000; margin-left: 50px; }
 </style>
 
 
 
  <div id="galleria">
+              <img src="images/restaurante/restaurante1.jpg">
+            <img src="images/restaurante/RESTAURANTE.JPG">
+            <img src="images/restaurante/restauran 2.jpg">
+            <img src="images/restaurante/la caba.jpg">
             <img src="images/restaurante/1.JPG">
             <img src="images/restaurante/2.JPG">
             <img src="images/restaurante/3.JPG">
             <img src="images/restaurante/4.JPG">        
             <img src="images/restaurante/5.JPG">
             <img src="images/restaurante/6.JPG">
-            <img src="images/restaurante/7.JPG">
+            <img src="images/restaurante/7.JPG">         
+            <img src="images/restaurante/8.JPG">
+            <img src="images/restaurante/9.JPG">
+            <img src="images/restaurante/10.JPG">
+            <img src="images/restaurante/11.JPG">
+            <img src="images/restaurante/12.JPG">
         </div>
 
 
