--- a/app/views/instalacion/bar.html.erb
+++ b/app/views/instalacion/bar.html.erb
@@ -331,7 +331,10 @@ right:auto;
 <div class="grid_6">
           <script>
             Galleria.loadTheme('galleria/themes/classic/galleria.classic.min.js');
-            Galleria.run('#galleria');
+            
+            $('#galleria').galleria({
+               autoplay:1000
+             });
         </script>  
 </div>
 <div class="grid_6">
