--- a/app/views/instalacion/index.html.erb
+++ b/app/views/instalacion/index.html.erb
@@ -309,6 +309,22 @@ body {background-image:url(images/pattern/ptn-04.png);}
 
     </script>
 
+    <script type="text/javascript">
+
+        <!--
+
+        function myPopup3(href) {
+
+            window.open( href, "myWindow",
+
+            "status = 1, height = 300, width = 500, resizable = no, left = 700" )
+
+        }
+
+        //-->
+
+    </script>
+
     
   <div id="pagetitle">
     	<div class="wrapper">
@@ -341,9 +357,8 @@ body {background-image:url(images/pattern/ptn-04.png);}
 	 
 
 <h3> <%=t :centro_negocios%></h3>
-<p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/centro_de_negocios.jpg" />  </p>
-<h3> <%=t :bar_clarion%></h3>
-<p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/bar.jpg" /></p>
+<p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/centro_de_negocios.jpg" onclick= "myPopup2('negocios')" />  </p>
+
 
                   </div>
                   <!-- Maincontent end -->
@@ -353,14 +368,13 @@ body {background-image:url(images/pattern/ptn-04.png);}
        	    <div class="mainbody">
        	      <div class="maincontent">
        	        <h3> Bar </h3>
-       	        <p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/bar.jpg" onclick = "myPopup2('bar')" />.</p>
+       	        <p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/bar.jpg" onclick = "myPopup2('bar')" /></p>.
        	       <h3> <%=t :eventos_banquetes%></h3>
-       	        <p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/eventos.jpg" />texto.
+       	        <p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/eventos.jpg" onclick= "myPopup2('eventos')"/>
                 <br>
 <br>
                 </p>
-                 <h3> <%=t :condominios_clarion%></h3>
-       	        <p><img src="images/condominios.jpg" alt=".shadow css class" width="290" height="135" border="0" class="shadow" style="margin-left: 0px; float: left" />Texto.</p>
+                 
    	          </div>
        	      <!-- Maincontent end -->
    	        </div>
@@ -369,28 +383,14 @@ body {background-image:url(images/pattern/ptn-04.png);}
        	  <div class="grid_13">
        	    <div class="mainbody">
        	      <div class="maincontent">
-       	        <h3> <%=t :area_juego%></h3>
-       	        <p><%= image_tag "area_de_juego.jpg", :width => 290, :height => 135, :class => "shadow", :style => "margin-left = 0px", :onclick => "javascript:window.open('salajuegos','popup','width=600,height=600,status=0,menubar=0,location=0');" %> Area de juego texto</p>
-<script type="text/javascript">
-function popup(pageURL, title, popupWidth, popupHeight) 
-    {
-        var left = (screen.width / 2) - (popupWidth / 2);
-        var top = (screen.height / 2) - (popupHeight / 2);
-        var targetPop = window.open(pageURL, title, 'toolbar=no, location=no, directories=no, 
-status=no, menubar=no, scrollbars=YES, resizable=YES, copyhistory=no, width=' + popupWidth + ', 
-height=' + popupHeight + ', top=' + top + ', left=' + left);
-    }
-</script>
-<a href="javascript:void(0);" onclick="popup('salajuegos', 
-'googlePopup',700,600);">OPEN GOOGLE</a>
+       	        <h3> Gym / Sauna </h3>
+<p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/gimnasio.jpg" onclick= "myPopup2('gym')"/></p>.
 
 
 
-
-       	        <h3>Sauna</h3>
-       	        <p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/sauna.jpg" />Texto.</p>
-                <h3> <%=t :servicio_domicilio%></h3>
-       	        <p><img src="images/domicilio.jpg" alt=".shadow css class" width="290" height="135" border="0" class="shadow" style="margin-left: 0px; float: left" /></a>TExto.</p>
+       	        <h3><%=t :condominios_clarion%></h3>
+       	        <p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/logo.png" onclick= "myPopup3('condominios')" /></p>
+                
    	          </div>
        	      <!-- Maincontent end -->
    	        </div>
