cambios fotos habitaciones y confort y decoraciones asi como lo de bienvenidos al hotel

--- a/app/views/habitaciones/index.html.erb
+++ b/app/views/habitaciones/index.html.erb
@@ -318,14 +318,8 @@ body {background-image:url(images/pattern/ptn-04.png);}
                 <a href="#1"><img src="/images/nivoslides/slide10.jpg" alt="Demo Slide" /></a>
             </div> 
                <div class="slide2">
-                <a href="#1"><img src="/images/nivoslides/slide11.jpg" alt="Demo Slide" /></a>
-            </div>
-               <div class="slide2">
                 <a href="#1"><img src="/images/nivoslides/slide12.jpg" alt="Demo Slide" /></a>
             </div>
-               <div class="slide2">
-                <a href="#1"><img src="/images/nivoslides/slide13.jpg" alt="Demo Slide" /></a>
-            </div>  
                <div class="slide2">
                 <a href="#1"><img src="/images/nivoslides/slide14.jpg" alt="Demo Slide" /></a>
             </div> 
@@ -378,7 +372,7 @@ body {background-image:url(images/pattern/ptn-04.png);}
               PBX :  (504) 255-36070 <br>
               PBX:   (504) 255-36071 <br>
               Fax:   (504) 255-24570 <br>
-              Email: recepcion@hotelclarionsps.com </p>
+              Email: reservaciones@hotelclarionsps.com </p>
           </div>
           <!-- Maincontent end -->
         </div>
