--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -656,9 +656,9 @@ body {background-image:url(images/pattern/ptn-04.png);}
 
 <div class="description-overlay" style="top: 20px; ">
 
-                       	  <h4>Reservaciones</h4>
+                       	  <h4><%= link_to t('reservaciones_clarion') %></h4>
 
-                            <p>Comuníquese con nosotros para cualquier consulta a través de nuestros teléfonos o por e-mail y, si lo desea, haga sus reservaciones mediante nuestra forma online haciendo click en este enlace.</p>
+               
 
                         </div>
 
@@ -674,9 +674,9 @@ body {background-image:url(images/pattern/ptn-04.png);}
 
                         <div class="description-overlay">
 
-                        	<h4>Instalaciones</h4>
-ta
-                            <p>Aqui iria texto instalaciones prueba.</p>
+                        	<h4><%= link_to t('instalaciones_clarion') %></h4>
+
+                        
 
                         </div>
 
@@ -692,9 +692,9 @@ ta
 
                         <div class="description-overlay">
 
-                        	<h4>Habitaciones</h4>
+                        	<h4><%= link_to t('habitaciones_clarion') %></h4>
 
-                            <p>Texto Habitaciones.</p>
+                   
 
                         </div>
 
