Promociones, eventos y banquetes

--- a/app/views/instalacion/eventos.html.erb
+++ b/app/views/instalacion/eventos.html.erb
@@ -302,9 +302,9 @@ right:auto;
 
  <div id="galleria">
           
-             <img src="images/bc/3.jpg">
-             <img src="images/bc/2.jpg">
-            <img src="images/bc/1.jpg">          
+             <img src="images/eventos/3.jpg">
+             <img src="images/eventos/2.jpg">
+            <img src="images/eventos/1.jpg">          
         </div>
 
 
