--- a/app/views/promociones/index.html.erb
+++ b/app/views/promociones/index.html.erb
@@ -330,27 +330,42 @@ right:auto;
 <% @advertisements.each do |advertisement| %>
 
 <% end %>
+   <div id="container" class="container_12 clearfix">
+       <div class="grid_12">
+	<div class="clear"></div>
+       </div>
+         <div class="block">
+           <div class="grid_6">
+	   </div>
+	 </div>
 
+          <div class="grid_6">
+            <h3><%= t(:cumple) %></h3>
+            <h3><a href="/images/fotospromociones/2.jpg">Catering Service</a></h3>
+            <h3><a href="/images/fotospromociones/3.jpg"><%= t(:romantico) %></a></h3>
+	      
+            </div>
+     
+     
+     
+     
+     
+     
+	
+     
+	    <h3><a href="/images/fotospromociones/1.jpg">Happy Hour</h3>
+            <h3><a href="/images/fotospromociones/4.jpg"><%= t(:menu) %></a></h3>
+            <h3><%= t(:habitacion) %></h3>
+            
+      
 
-<script src="galleria/galleria-1.2.9.min.js"></script>
-<style>
-    #galleria{ width: 800px; height: 400px; background-color: #000; margin-left: auto; margin-right: auto; }
-</style>
+</div>
 
+    </div><!-- Block End --><!-- Block End -->
 
+        
 
- <div id="galleria">
-            <img src="images/fotospromociones/1.jpg">
-            <img src="images/fotospromociones/2.jpg">
-            <img src="images/fotospromociones/3.jpg">
-            <img src="images/fotospromociones/4.jpg">
-        </div>
-
-
-<script>
-            Galleria.loadTheme('galleria/themes/classic/galleria.classic.min.js');
-            Galleria.run('#galleria');
-        </script>
+  </div><!-- Container End -->
 
   <div id="bottom">
       <!-- Container 12 End -->
