--- a/app/views/habitaciones/index.html.erb
+++ b/app/views/habitaciones/index.html.erb
@@ -341,7 +341,7 @@ body {background-image:url(images/pattern/ptn-04.png);}
   <div class="block">
         <div>
           <h2 class="title"><%=t :nuestras_habitaciones%></h2>
-          <p> Todas nuestras comodas,relajantes y lujosas habitaciones han sido decoradas con el mejor gusto para hacer de cada estancia una experiencia inolvidable y así sobrepasar las expectativas de nuestros huéspedes,cuentan con finas amenidades para hacer de su estadia unica, entre ellas: Aire acondicionado, TV de 32' con cable, acceso a internet inalambrico de alta velocidad, escritorio de trabajo, amplios baños con ducha y secadora. El huesped tiene como cortesia el cafe y el agua dentro de la habitacion. El Hotel cuenta con seguridad las 24 horas y camaras de vigilancias en todas sus areas</p>
+          <p> <%=t :nuestras_texto%></p>
         </div>
  
       </div>
@@ -349,7 +349,7 @@ body {background-image:url(images/pattern/ptn-04.png);}
         <div class="mainbody">
           <div class="maincontent">
             <h3><%=t :confort_clarion%></h3>
-            <p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/conf.jpg" /> Le ofrecemos muchos servicios y comodidades para que se sienta como en casa, y pueda mantenerse en contacto con sus amigos y su familia.<br></p>
+            <p><img width="290" height="135" class="shadow" style="margin-left: 0px; float: left" alt=".shadow css class" src="images/conf.jpg" /> <%=t :confort_texto%><br></p>
           </div>
           <!-- Maincontent end -->
         </div>
@@ -374,7 +374,7 @@ body {background-image:url(images/pattern/ptn-04.png);}
         <div class="mainbody">
           <div class="maincontent">
             <h3><%=t :reservaciones_clarion%></h3>
-            <p><a href="otros.html"><img src="/images/reservaciones290.jpg" alt=".shadow css class" width="290" height="135" border="0" class="shadow" style="margin-left: 0px; float: left" /></a>Dirección: Avenida Circunvalación 2 Calle, S.O. Bo. Rio de piedras. San Pedro Sula, Cortés, Honduras<br>
+            <p><a href="otros.html"><img src="/images/reservaciones290.jpg" alt=".shadow css class" width="290" height="135" border="0" class="shadow" style="margin-left: 0px; float: left" /></a><%=t :reservaciones_texto%><br>
               PBX :  (504) 255-36070 <br>
               PBX:   (504) 255-36071 <br>
               Fax:   (504) 255-24570 <br>
