--- a/app/views/galeria/index.html.erb
+++ b/app/views/galeria/index.html.erb
@@ -308,7 +308,9 @@ body {background-image:url(images/pattern/ptn-04.png);}
         	<div class="grid_12">
 				<div class="mainbody">
                     <div class="maincontent">
-                        <ul class="gallery"><li><a href="images/galeria/slide1.jpg" rel="colorbox"><img src="images/galeria/slide1.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide2.jpg" rel="colorbox"><img src="images/galeria/slide2.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide3.jpg"" rel="colorbox"><img src="images/galeria/slide3.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide4.jpg" rel="colorbox"><img src="images/galeria/slide4.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide5.jpg" rel="colorbox"><img src="images/galeria/slide5.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide6.jpg" rel="colorbox"><img src="images/galeria/slide6.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide7.jpg"rel="colorbox"><img src="images/galeria/slide7.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide8.jpg" rel="colorbox"><img src="images/galeria/slide8.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide9.jpg" rel="colorbox"><img src="images/galeria/slide9.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide10.jpg" rel="colorbox"><img src="images/galeria/slide10.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide11.jpg" rel="colorbox"><img src="images/galeria/slide11.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide12.jpg" rel="colorbox"><img src="images/galeria/slide12.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide13.jpg" rel="colorbox"><img src="images/galeria/slide13.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide14.jpg" rel="colorbox"><img src="images/galeria/slide14.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide15.jpg" rel="colorbox"><img src="images/galeria/slide15.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide16.jpg"rel="colorbox"><img src="images/galeria/slide16.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide17.jpg"rel="colorbox"><img src="images/galeria/slide17.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide18.jpg" rel="colorbox"><img src="images/galeria/slide18.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide19.jpg" rel="colorbox"><img src="images/galeria/slide19.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide20.jpg" rel="colorbox"><img src="images/galeria/slide20.jpg" alt=""  width="165" height="110" /></a></li>
+                        <ul class="gallery"><li><a href="images/galeria/slide1.jpg" rel="colorbox"><img src="images/galeria/slide1.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide2.jpg" rel="colorbox"><img src="images/galeria/slide2.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide3.jpg"" rel="colorbox"><img src="images/galeria/slide3.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide4.jpg" rel="colorbox"><img src="images/galeria/slide4.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide5.jpg" rel="colorbox"><img src="images/galeria/slide5.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide6.jpg" rel="colorbox"><img src="images/galeria/slide6.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide7.jpg"rel="colorbox"><img src="images/galeria/slide7.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide8.
+jpg" rel="colorbox"><img src="images/galeria/slide8.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide9.jpg" rel="colorbox"><img src="images/galeria/slide9.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide10.jpg" rel="colorbox"><img src="images/galeria/slide10.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide11.jpg" rel="colorbox"><img src="images/galeria/slide11.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide12.jpg" rel="colorbox"><img src="images/galeria/slide12.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide13.jpg" rel="colorbox"><img src="images/galeria/slide13.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide14.jpg" rel="colorbox"><img src="images/galeria/slide14.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide15.jpg" rel="colorbox"><img src="images/galeria/slide15.jpg" alt="" 
+width="165" height="110" /></a></li><li><a href="images/galeria/slide16.jpg"rel="colorbox"><img src="images/galeria/slide16.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide17.jpg"rel="colorbox"><img src="images/galeria/slide17.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide18.jpg" rel="colorbox"><img src="images/galeria/slide18.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide19.jpg" rel="colorbox"><img src="images/galeria/slide19.jpg" alt="" width="165" height="110" /></a></li><li><a href="images/galeria/slide20.jpg" rel="colorbox"><img src="images/galeria/slide20.jpg" alt=""  width="165" height="110" /></a></li>
                         </ul>                    </div><!-- Maincontent end -->
                 </div><!-- Mainbody end -->
             </div><!-- grid9 end --><!-- Sidebar end --></div><!-- Content End -->
@@ -317,15 +319,17 @@ body {background-image:url(images/pattern/ptn-04.png);}
 
     <div id="bottom">
       <!-- Container 12 End -->
-      <div id="footer2" class="container_12">
-        <table width="960" border="0" align="center" cellpadding="0" cellspacing="0">
-          <tr>
-            <td> © Copyright 2012 Hotel Clarion San Pedro Sula Diseño: Jorge Padilla y Francisco Calix </td>
-            <td class="partner_hotels"><a href="hoteles_asociados.html">Hotel Clarion</a></td>
-          </tr>
-        </table>
-      </div>
+     <div id="footer2" class="container_12" >
+      <table  width="100%">
+	  <td>
+	      <a>Sitio web diseñado por TAPHN © Copyright 2013</a>
+	  </td>
+	  <td align="right">
+	      <a href="http://www.facebook.com/pages/Clarion-San-Pedro-Sula/204168159620073" target="_TOP" title="Hotel Clarion San Pedro Sula"><img src="/images/facebook_64.png" style="border: 0px;" /></a><br/><a href="http://www.facebook.com/business/dashboard/" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" </a> <!-- Facebook Badge END -->  
+	  </td>  
+       </table> 
     </div>
+   </div>
     <!-- Bottom End -->
 </div><!-- Wrapper end -->
 
