galeria thumbnail y peticiones de googlefont

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -656,7 +656,7 @@ body {background-image:url(images/pattern/ptn-04.png);}
 
 <div class="description-overlay" style="top: 20px; ">
 
-                       	  <h4><%= link_to t('reservaciones_clarion') %></h4>
+                       	  <h4><%= link_to t('reservaciones_clarion'),reservaciones_path %></h4>
 
                
 
@@ -674,7 +674,7 @@ body {background-image:url(images/pattern/ptn-04.png);}
 
                         <div class="description-overlay">
 
-                        	<h4><%= link_to t('instalaciones_clarion') %></h4>
+                        	<h4><%= link_to t('instalaciones_clarion'),instalaciones_path %></h4>
 
                         
 
@@ -692,7 +692,7 @@ body {background-image:url(images/pattern/ptn-04.png);}
 
                         <div class="description-overlay">
 
-                        	<h4><%= link_to t('habitaciones_clarion') %></h4>
+                        	<h4><%= link_to t('habitaciones_clarion'),habitaciones_path %></h4>
 
                    
 
