--- a/app/views/instalacion/bar.html.erb
+++ b/app/views/instalacion/bar.html.erb
@@ -13,7 +13,7 @@
 <link href="css/colorbox.css" rel="stylesheet" type="text/css" /> 
 <link href="css/nivo-slider.css" rel="stylesheet" />
 <link href="css/superfish.css" rel="stylesheet" />
-<link id="google_font" href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:light,regular' rel='stylesheet' type='text/css' />
+<link href="css/google_font.css" rel="stylesheet" />
 <!-- fallback if js not enabled //-->
 <link href="css/noscript.css" rel="stylesheet" type="text/css" media="screen,all" id="noscript" /> 
 
@@ -29,7 +29,6 @@
 <script type="text/javascript" src="js/jquery.nivo.slider.pack.js"></script>
 <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
 <script type="text/javascript" src="js/jquery.infieldlabel.min.js"></script>
-<script type="text/javascript" src="js/jquery.twitter.js"></script>
 <script type="text/javascript" src="js/jquery.supersubs.js"></script>
 <script type="text/javascript" src="js/jquery.superfish.js"></script>
 <script type="text/javascript" src="js/functions.js"></script> 
@@ -304,13 +303,7 @@ right:auto;
           
              <img src="images/bar/1.jpg">
              <img src="images/bar/2.jpg">
-            <img src="images/bar/3.jpg">
-           <img src="images/bar/4.jpg">       
-            <img src="images/bar/5.jpg"> 
-            <img src="images/bar/6.jpg"> 
            <img src="images/bar/7.jpg">          
-            <img src="images/bar/8.jpg"> 
-            <img src="images/bar/9.jpg"> 
             <img src="images/bar/10.jpg"> 
             <img src="images/bar/11.jpg"> 
             <img src="images/bar/12.jpg"> 
