--- a/app/views/instalacion/salajuegos.html.erb
+++ b/app/views/instalacion/salajuegos.html.erb
@@ -13,7 +13,7 @@
 <link href="css/colorbox.css" rel="stylesheet" type="text/css" /> 
 <link href="css/nivo-slider.css" rel="stylesheet" />
 <link href="css/superfish.css" rel="stylesheet" />
-<link id="google_font" href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:light,regular' rel='stylesheet' type='text/css' />
+<link href="css/google_font.css" rel="stylesheet" />
 <!-- fallback if js not enabled //-->
 <link href="css/noscript.css" rel="stylesheet" type="text/css" media="screen,all" id="noscript" /> 
 
@@ -310,13 +310,7 @@ right:auto;
             <img src="images/restaurante/3.JPG">
             <img src="images/restaurante/4.JPG">        
             <img src="images/restaurante/5.JPG">
-            <img src="images/restaurante/6.JPG">
-            <img src="images/restaurante/7.JPG">         
-            <img src="images/restaurante/8.JPG">
-            <img src="images/restaurante/9.JPG">
-            <img src="images/restaurante/10.JPG">
-            <img src="images/restaurante/11.JPG">
-            <img src="images/restaurante/12.JPG">
+            <img src="images/restaurante/6.JPG">        
         </div>
 
 
