--- a/app/views/reservacion/index.html.erb
+++ b/app/views/reservacion/index.html.erb
@@ -14,7 +14,7 @@
 <link href="css/plusslider.css" rel="stylesheet" />
 <link href="css/reservacion.css" rel="stylesheet" />
 <link href="css/superfish.css" rel="stylesheet" />
-<link id="google_font" href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:light,regular' rel='stylesheet' type='text/css' />
+<link href="css/google_font.css" rel="stylesheet" />
 <!-- fallback if js not enabled //-->
 <link href="css/noscript.css" rel="stylesheet" type="text/css" media="screen,all" id="noscript" /> 
 <!-- CSS End //-->
