--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,7 +18,7 @@
 
 <!-- CSS Start //--> 
 
-<link rel="shortcut icon" href="images/favicon.png" /> 
+<link rel="shortcut icon" href="images/favicon.ico" /> 
 
 <link href="style.css" rel="stylesheet" type="text/css" /> 
 
