--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,7 @@ IMPORTANT TIPS:
 - To change font, search for - 'Yanone Kaffeesatz' (the font which is set right now) and replace with your own font;
 
 */
-
+/*  */
 /* Import CSS Reset File */
 @import url("css/reset.css");
 /* Import CSS 960 Grid System File */
